--- a/conf/KLGCN.properties
+++ b/conf/KLGCN.properties
@@ -10,7 +10,7 @@ n_fold = 100
 aggregator = sum
 n_neighbors = 8
 ## ctr, mf, mf&ctr, cross
-loss_type = mf
+loss_type = cross
 ## concat, rate, add, stack
 concat_type = rate
 ## whether plus user embedding when generate final user embeddings
@@ -27,7 +27,7 @@ agg = sum
 att_type = ur+cr
 loss_function = cross_entropy
 ;adj_type = plain, norm, gcmc, pre
-adj_type = pre
+adj_type = gcmc
 ## whether add user to kg
 add_user = False
 ## whether r1 == r2  (h, r1, t), (t, r2, h)
