fix the adj_mat

--- a/conf/KLGCN.properties
+++ b/conf/KLGCN.properties
@@ -10,7 +10,7 @@ n_fold = 100
 aggregator = sum
 n_neighbors = 8
 ## ctr, mf, mf&ctr, cross
-loss_type = mf
+loss_type = cross
 ## concat, rate, add, stack
 concat_type = rate
 ## whether plus user embedding when generate final user embeddings
